--- a/sky/templates/kubernetes-ray.yml.j2
+++ b/sky/templates/kubernetes-ray.yml.j2
@@ -439,6 +439,10 @@ available_node_types:
         # object store. If you do not provide this, Ray will fall back to
         # /tmp which cause slowdowns if is not a shared memory volume.
         volumes:
+        - name: jfs-old
+          hostPath:
+            path: "/mnt/jfs-old"
+            type: Directory
         - name: dshm
           emptyDir:
             medium: Memory
@@ -1105,6 +1109,8 @@ available_node_types:
           # object store. If you do not provide this, Ray will fall back to
           # /tmp which cause slowdowns if is not a shared memory volume.
           volumeMounts:
+          - mountPath: /mnt/jfs-old
+            name: jfs-old
           - mountPath: /dev/shm
             name: dshm
           {% if k8s_enable_gpudirect_tcpx %}
